<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>spring-creed-module-system</artifactId>
        <groupId>com.ethan</groupId>
        <version>${revision}</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>spring-creed-module-system-biz</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.ethan</groupId>
            <artifactId>spring-creed-common</artifactId>
        </dependency>
        <dependency>
            <groupId>com.ethan</groupId>
            <artifactId>spring-creed-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>com.ethan</groupId>
            <artifactId>spring-creed-starter-banner</artifactId>
        </dependency>
        <dependency>
            <groupId>com.ethan</groupId>
            <artifactId>spring-creed-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>com.ethan</groupId>
            <artifactId>spring-creed-module-system-api</artifactId>
            <version>${revision}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.tika</groupId>
            <artifactId>tika-core</artifactId>
        </dependency>
    </dependencies>

</project>